[tool.poetry]
name = "super-py"
version = "0.2.0"
description = "Features that Python should have in the standard library"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
