[tool.poetry]
name = "super-py"
version = "0.4.1"
repository = "https://github.com/mkrd/SuperPy"
description = "Features that Python should have in the standard library"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
